# routes/index.js
@@ -3,18 +3,18 @@ var router = express.Router();
 
 //pg config
 var pg = require('pg');
-var conString = 'postgres://@localhost/avidapi';
+var conString = process.env.DATABASE_URL;
 
-//Gaurdians
+//Guardians
 //get all
-router.get('/gaurdians', function(req, res, next) {
+router.get('/guardians', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
      console.log(conString)
     if (err) {
       return console.error('error fetching client from pool', err);
     }
     console.log("connected to database");
-    client.query('SELECT * FROM gaurdians', function(err, result) {
+    client.query('SELECT * FROM guardians', function(err, result) {
       done();
       if (err) {
         return console.error('error running query', err);
@@ -25,13 +25,13 @@ router.get('/gaurdians', function(req, res, next) {
 });
 
 //post gaurdian
-router.post('/gaurdians', function(req, res, next) {
+router.post('/guardians', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
     if (err) {
       return console.error('error fetching client from pool', err);
     }
     console.log("connected to database");
-    client.query('INSERT INTO gaurdians(name) VALUES($1) returning id', [req.body.data.attributes.name], function(err, result) {
+    client.query('INSERT INTO guardians(name) VALUES($1) returning id', [req.body.data.attributes.name], function(err, result) {
       done();
       if(err) {
         return console.error('error running query', err);
@@ -43,13 +43,13 @@ router.post('/gaurdians', function(req, res, next) {
 });
 
 //get one
-router.get('/gaurdians/:id', function(req, res, next) {
+router.get('/guardians/:id', function(req, res, next) {
   pg.connect(conString, function(err, client, done) {
     if (err) {
       return console.error('error fetching client from pool', err);
     }
     console.log("connected to database");
-    client.query('SELECT * FROM gaurdians WHERE id = $1', [req.params.id], function(err, result) {
+    client.query('SELECT * FROM guardians WHERE id = $1', [req.params.id], function(err, result) {
       done();
       console.log(req.params.id)
       if (err) {
@@ -79,40 +79,207 @@ router.get('/kids', function(req, res, next) {
   });
 });
 
-// //insert one
-// router.post('/kids', function(req, res, next) {
-//   pg.connect(conString, function(err, client, done) {
-//     if (err) {
-//       return console.error('error fetching client from pool', err);
-//     }
-//     console.log("connected to database");
-//     client.query('INSERT INTO kids(name) VALUES($1) returning id', [req.body.data.attributes.name], function(err, result) {
-//       done();
-//       if(err) {
-//         return console.error('error running query', err);
-//       }
-//       res.send(result);
-//       //output: 1 
-//     });
-//   });
-// });
+//insert one
+router.post('/kids', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('INSERT INTO kids(name, gender, age) VALUES($1, $2, $3) returning id', [req.body.data.attributes.name, req.body.data.attributes.gender, req.body.data.attributes.age], function(err, result) {
+      done();
+      if(err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+      //output: 1 
+    });
+  });
+});
 
-// //get one
-// router.get('/kids/:id', function(req, res, next) {
-//   pg.connect(conString, function(err, client, done) {
-//     if (err) {
-//       return console.error('error fetching client from pool', err);
-//     }
-//     console.log("connected to database");
-//     client.query('SELECT * FROM kids WHERE id = $1', [req.params.id], function(err, result) {
-//       done();
-//       console.log(req.params.id)
-//       if (err) {
-//         return console.error('error running query', err);
-//       }
-//       res.send(result);
-//     });
-//   });
-// });
+//get one
+router.get('/kids/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM kids WHERE id = $1', [req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+//Activities
+//get all
+router.get('/activities', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    console.log(conString)
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM activities', function(err, result) {
+      done();
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+//insert one
+router.post('/activities', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('INSERT INTO activities(name) VALUES($1) returning id', [req.body.data.attributes.name], function(err, result) {
+      done();
+      if(err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+      //output: 1 
+    });
+  });
+});
+
+//get one
+router.get('/activities/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM activities WHERE id = $1', [req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+//Relationships
+//get all
+router.get('/relationships', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    console.log(conString)
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM relationships', function(err, result) {
+      done();
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+//post one
+router.post('/relationships', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('INSERT INTO relationships(gaurdian_id, kid_id) VALUES($1, $2) returning id', [req.body.data.attributes.gaurdian_id, req.body.data.attributes.kid_id], function(err, result) {
+      done();
+      if(err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+      //output: 1 
+    });
+  });
+});
+
+//get one
+router.get('/relationships/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM relationships WHERE id = $1', [req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+//Interests
+//get all
+router.get('/interests', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    console.log(conString)
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM interests', function(err, result) {
+      done();
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+//post one
+router.post('/interests', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('INSERT INTO interests(kid_id, activity_id) VALUES($1, $2) returning id', [req.body.data.attributes.kid_id, req.body.data.attributes.activity_id], function(err, result) {
+      done();
+      if(err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+      //output: 1 
+    });
+  });
+});
+
+//get one
+router.get('/interests/:id', function(req, res, next) {
+  pg.connect(conString, function(err, client, done) {
+    if (err) {
+      return console.error('error fetching client from pool', err);
+    }
+    console.log("connected to database");
+    client.query('SELECT * FROM interests WHERE id = $1', [req.params.id], function(err, result) {
+      done();
+      console.log(req.params.id)
+      if (err) {
+        return console.error('error running query', err);
+      }
+      res.send(result);
+    });
+  });
+});
+
+
 
 module.exports = router;
